--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto-js": "^4.2.0",
     "marked": "^12.0.2",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
@@ -42,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage" : "/deploy/ai-front"
+  "homepage": "/deploy/ai-front",
+  "devDependencies": {
+    "@types/crypto-js": "^4.2.2"
+  }
 }
