--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "ai-translator",
-  "version": "0.1.0",
+  "name": "ai-front",
+  "author": "Hve",
+  "description": "A brief description of your application",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.2.0",
+    "electron-squirrel-startup": "^1.0.1",
     "marked": "^12.0.2",
     "react": "^18.3.1",
     "react-cookie": "^7.1.4",
@@ -19,11 +22,16 @@
     "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
+  "main": "src/main.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start-with-electron": "concurrently \"yarn react-scripts start\" \"yarn electron\" ",
+    "electron": "wait-on http://localhost:3000 && electron .",
+    "start": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +52,19 @@
     ]
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.2"
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "@types/crypto-js": "^4.2.2",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^31.1.0",
+    "typescript": "^5.5.3",
+    "wait-on": "^7.2.0"
   }
 }
