--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "crypto-js": "^4.2.0",
+    "electron-is-dev": "^3.0.1",
     "electron-localshortcut": "^3.2.1",
     "electron-squirrel-startup": "^1.0.1",
     "marked": "^12.0.2",
@@ -23,16 +24,19 @@
     "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
-  "main": "src/main.js",
+  "main": "main.js",
+  "homepage": "./",
   "scripts": {
-    "start-with-electron": "concurrently \"yarn react-scripts start\" \"yarn electron\" ",
     "electron": "wait-on http://localhost:3000 && electron .",
-    "start": "electron-forge start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "package": "electron-forge package",
-    "make": "electron-forge make"
+    "web:start": "cross-env TARGET_ENV=WEB REACT_APP_TARGET_ENV=WEB yarn react-scripts start",
+    "electron:start": "cross-env TARGET_ENV=WINDOWS REACT_APP_TARGET_ENV=WINDOWS DEV=TRUE BROWSER=none concurrently \"yarn react-scripts start\" \"yarn electron\"",
+    "electron:build": "cross-env TARGET_ENV=WINDOWS REACT_APP_TARGET_ENV=WINDOWS DEV=FALSE BROWSER=none yarn build && electron-builder -c.extraMetadata.main=./main.js",
+    "electron-builder:build": "cross-env TARGET_ENV=WINDOWS DEV=FALSE electron-builder -c.extraMetadata.main=./main.js"
   },
   "eslintConfig": {
     "extends": [
@@ -65,7 +69,24 @@
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^31.1.0",
+    "electron-builder": "^24.13.3",
     "typescript": "^5.5.3",
     "wait-on": "^7.2.0"
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.hve.aifront",
+    "files": [
+      "dist/**/*",
+      "build/**/**",
+      "node_modules/**/*",
+      "package.json",
+      "main.js",
+      "preload.js",
+      "src/data/ipc.js"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
