--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "sass": "^1.77.8",
     "web-vitals": "^2.1.4"
   },
   "main": "electron/main.js",
