FIX : 데이터 초기화 중 생기는 문제

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ai-front",
   "author": "Hve",
-  "description": "Simple ChatAI Frontend",
-  "version": "0.4.1",
+  "description": "ChatAI Frontend",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
