--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GENERATE_SOURCEMAP=false
 REACT_APP_HOMEPAGE=
-REACT_APP_DEBUG=
-REACT_APP_VERSION=v0.5.1
+REACT_APP_DEBUG=TRUE
+REACT_APP_VERSION=v0.5.2-dev
