--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sass": "^1.77.8",
+    "sqlite3": "^5.1.7",
     "web-vitals": "^2.1.4"
   },
   "main": "electron/main.js",
