--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-front",
   "author": "Hve",
   "description": "ChatAI Frontend",
-  "version": "0.5.3",
+  "version": "0.5.4-dev.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +12,7 @@
     "crypto-js": "^4.2.0",
     "electron-is-dev": "^3.0.1",
     "electron-localshortcut": "^3.2.1",
+    "jest": "^29.7.0",
     "marked": "^12.0.2",
     "node-fetch-cjs": "^3.3.2",
     "react": "^18.3.1",
@@ -24,6 +25,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "sass": "^1.77.8",
+    "ts-node": "^10.9.2",
     "web-vitals": "^2.1.4"
   },
   "main": "electron/main.js",
@@ -32,7 +34,7 @@
     "electron": "wait-on http://localhost:3000 && electron .",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --silent=false",
     "eject": "react-scripts eject",
     "package": "electron-forge package",
     "web:debug": "cross-env REACT_APP_DEBUG=TRUE REACT_APP_TARGET_ENV=WEB yarn react-scripts start",
@@ -70,10 +72,12 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron/fuses": "^1.8.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.12",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "electron": "^31.1.0",
     "electron-builder": "^24.13.3",
+    "ts-jest": "^29.2.3",
     "typescript": "^5.5.3",
     "wait-on": "^7.2.0"
   },
