--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "better-sqlite3": "^11.1.2",
+    "better-sqlite3": "^11.2.1",
     "crypto-js": "^4.2.0",
     "electron-is-dev": "^3.0.1",
     "electron-localshortcut": "^3.2.1",
@@ -77,6 +77,7 @@
     "cross-env": "^7.0.3",
     "electron": "^31.1.0",
     "electron-builder": "^24.13.3",
+    "electron-rebuild": "^3.2.9",
     "ts-jest": "^29.2.3",
     "typescript": "^5.5.3",
     "wait-on": "^7.2.0"
