--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
-        "module": "esnext",
-        "target": "esnext",
+        "module": "ES2022",
+        "target": "ES2022",
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
