--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
+electron/compiled/
+
 apikey
 .prompts/
 
@@ -27,3 +30,4 @@ apikey
 out/
 dist/
 /electron/temp.js
+
