--- a/electron/package.json
+++ b/electron/package.json
@@ -26,6 +26,7 @@
     "@electron/fuses": "^1.8.0",
     "cross-env": "^7.0.3",
     "electron": "^32.1.2",
+    "jest": "^29.7.0",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
