--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -30,7 +30,6 @@
         "skipLibCheck": false /* Skip type checking all .d.ts files. */
     },
     "include": [
-        "./src/**/*",
-        "./global.d.ts"
+        "./src/**/*"
     ]
 }
