--- a/electron/package.json
+++ b/electron/package.json
@@ -17,6 +17,7 @@
     "make": "electron-forge make"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@electron-forge/cli": "^7.5.0",
     "@electron-forge/maker-deb": "^7.5.0",
     "@electron-forge/maker-rpm": "^7.5.0",
