--- a/front/package.json
+++ b/front/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-loading": "^2.0.3",
     "react-markdown": "^9.0.1",
     "sass": "^1.80.6"
   },
