--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "@xyflow/react": "^12.3.6",
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
     "jest": "^29.7.0",
