--- a/front/package.json
+++ b/front/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hve/cbf": "^0.2.0",
     "@monaco-editor/react": "^4.6.0",
     "@xyflow/react": "^12.3.6",
     "classnames": "^2.5.1",
     "crypto-js": "^4.2.0",
+    "i18next": "^24.2.1",
     "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-loading": "^2.0.3",
     "react-markdown": "^9.0.1",
     "sass": "^1.80.6"
