--- a/electron/package.json
+++ b/electron/package.json
@@ -1,17 +1,18 @@
 {
   "name": "afron",
   "version": "0.6.9",
+  "description": "ChatAI Frontend",
   "repository": "https://github.com/hve4638/ai-front.git",
   "author": "Hve <hve4638@gmail.com>",
   "license": "MIT",
-  "main": "compiled/main.js",
+  "main": "dist/main.js",
   "scripts": {
-    "start": "tsc && electron-forge start",
-    "start:dev": "tsc && cross-env ELECTRON_DEV=TRUE electron .",
-    "start:release": "tsc && cross-env ELECTRON_DEV=FALSE electron .",
+    "start": "yarn build && electron-forge start",
+    "start:dev": "yarn build && cross-env ELECTRON_DEV=TRUE electron .",
+    "start:release": "yarn build && cross-env ELECTRON_DEV=FALSE electron .",
     "switch": "tsx switch-module",
-    "test": "tsc && yarn jest",
-    "build": "tsc",
+    "test": "jest",
+    "build": "rollup -c",
     "compile": "tsc",
     "package": "electron-forge package",
     "make": "electron-forge make"
@@ -26,16 +27,23 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.5.0",
     "@electron-forge/plugin-fuses": "^7.5.0",
     "@electron/fuses": "^1.8.0",
+    "@rollup/plugin-commonjs": "^28.0.2",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/jest": "^29.5.14",
     "cross-env": "^7.0.3",
     "electron": "^32.1.2",
     "jest": "^29.7.0",
+    "rollup": "^4.28.1",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@hve/chatai": "^0.5.1",
+    "@hve/fs-storage": "^0.1.0",
     "better-sqlite3": "^11.3.0",
     "electron-localshortcut": "^3.2.1",
     "electron-squirrel-startup": "^1.0.1",
