--- a/electron/package.json
+++ b/electron/package.json
@@ -37,13 +37,14 @@
     "jest": "^29.7.0",
     "rollup": "^4.28.1",
     "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@hve/chatai": "^0.5.1",
-    "@hve/fs-storage": "^0.1.0",
+    "@hve/fs-storage": "^0.2.0",
     "better-sqlite3": "^11.3.0",
     "electron-localshortcut": "^3.2.1",
     "electron-squirrel-startup": "^1.0.1",
