--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -32,7 +32,9 @@
           "@utils/*": ["src/utils/*"],
           "@lib/*": ["src/lib/*"],
           "@ipc/*": ["src/ipc/*"],
-          "@features/*": ["src/features/*"]
+          "@features/*": ["src/features/*"],
+          "@types": ["src/types/index"],
+          "@types/*": ["src/types/*"]
         }
     },
     "include": [
