--- a/electron/package.json
+++ b/electron/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "yarn build && electron-forge start",
     "start:dev": "yarn build && cross-env ELECTRON_DEV=TRUE electron .",
+    "start:dev:mem": "yarn build && cross-env ELECTRON_DEV=TRUE ELECTRON_IN_MEMORY=TRUE electron .",
     "start:release": "yarn build && cross-env ELECTRON_DEV=FALSE electron .",
     "playground": "tsx ./src/playground",
     "test": "jest",
