--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "scripts": {
         "start": "concurrently \"yarn electron:start\" \"yarn front:start\"",
         "start:mem": "concurrently \"yarn electron:start:mem\" \"yarn front:start\"",
+        "start:test": "concurrently \"yarn electron:start:mem\" \"yarn front:start:test\"",
         "start:debug": "concurrently \"yarn electron:start\" \"yarn front:debug\"",
         "front:start": "cd front && yarn start",
+        "front:start:test": "cd front && yarn start:test",
         "front:debug": "cd front && yarn start",
         "electron:start": "cd electron && wait-on http://localhost:3600 && yarn start:dev",
         "electron:start:mem": "cd electron && wait-on http://localhost:3600 && yarn start:dev:mem",
