--- a/electron/package.json
+++ b/electron/package.json
@@ -47,6 +47,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "ac-storage": "^0.11.0",
     "better-sqlite3": "^11.3.0",
     "electron-localshortcut": "^3.2.1",
     "electron-squirrel-startup": "^1.0.1",
