--- a/electron/package.json
+++ b/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "afron",
-  "version": "0.7.3",
+  "version": "0.8.0",
   "description": "ChatAI Frontend",
   "repository": "https://github.com/hve4638/ai-front.git",
   "author": "Hve",
@@ -52,8 +52,9 @@
   },
   "dependencies": {
     "@hve/channel": "^1.0.1",
+    "@hve/chatai": "^0.12.0",
     "@hve/mime": "^1.0.0",
-    "@hve/prompt-template": "^0.1.0",
+    "@hve/prompt-template": "^0.2.0",
     "ac-storage": "^0.12.0",
     "better-sqlite3": "^11.3.0",
     "date-fns": "^4.1.0",
