--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,12 +13,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@afron/types": "1.0.0",
     "@hve/channel": "^1.0.1",
     "@hve/chatai": "^0.12.0",
     "@hve/mime": "^1.0.0",
     "@hve/prompt-template": "^0.2.0",
     "ac-storage": "^0.12.0",
-    "better-sqlite3": "^11.3.0",
+    "better-sqlite3": "^12.2.0",
     "js-tiktoken": "^1.0.20",
     "sharp": "^0.34.2",
     "systeminformation": "^5.23.23",
@@ -31,6 +32,7 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
+    "@electron/rebuild": "^4.0.1",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
@@ -39,6 +41,7 @@
     "@types/node": "^22.10.2",
     "babel-jest": "^30.0.4",
     "dotenv": "^16.5.0",
+    "electron-rebuild": "^3.2.9",
     "jest": "^29.7.0",
     "rollup": "^2.79.2",
     "rollup-plugin-dts": "^6.1.1",
