--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^29.5.14",
+    "better-sqlite3": "^12.2.0",
     "cross-env": "^7.0.3",
     "electron": "^37.2.3",
     "electron-builder": "^26.0.12",
@@ -54,12 +55,12 @@
   "dependencies": {
     "@afron/chatai-models": "1.0.0",
     "@afron/core": "1.0.0",
+    "@afron/types": "1.0.0",
     "@hve/channel": "^1.0.1",
     "@hve/chatai": "^0.12.0",
     "@hve/mime": "^1.0.0",
     "@hve/prompt-template": "^0.2.0",
     "ac-storage": "^0.12.0",
-    "better-sqlite3": "^11.3.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.5.0",
