--- a/packages/front/tsconfig.app.json
+++ b/packages/front/tsconfig.app.json
@@ -35,7 +35,10 @@
     "paths" : {
       "@/*": ["*"],
       "@shared/*": ["../../shared/*"]
-    }
+    },
+    "types" : [
+      "@afron/types"
+    ]
   },
   "include": ["src", "src/global.d.ts"],
 }
